[project]
name = "marimo-examples"
version = "0.1.0"
description = "A curated collection of example marimo notebooks — use these as templates for your own experiments, workflows, and tools."
authors = ["akshay@marimo.io"]
license = "MIT"
readme = "README.md"
dependencies = [
    "altair==5.5.0",
    "dulwich[paramiko]>=1.2.0",
    "gitpython>=3.1.46",
    "marimo>=0.23.2",
    "matplotlib==3.10.0",
    "pandas==2.2.3",
    "paramiko>=4.0.0",
    "polars==1.20.0",
    "scikit-learn==1.6.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
